app/assets/stylesheets/application.scss
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or any plugin's vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any styles
 * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
 * file per style scope.
 *
 */

 // "bootstrap-sprockets" must be imported before "bootstrap" and "bootstrap/variables"
@import "bootstrap-sprockets";
@import "bootstrap";

body {
  margin-top: 75px;
  font-family: 'Alegreya', serif;
}

#order_card_exp_2i, #order_card_exp_1i {
  width: auto;
}

.glyphicon-remove {
  font-size: 30px;
}

h1, h2, h3, h4, h5, h6, a, input[type="submit"], .navbar-text, legend, .dropdown-toggle, th {
  font-family: 'Nunito', sans-serif;
}

select {
  width: 40px;
}

div.navbar-brand {
  background: -webkit-linear-gradient(to right, #fff, #d9b3ff, #222);
  background: linear-gradient(to right, #fff, #d9b3ff, #222);
  // font-family: 'Crafty Girls', cursive;
  // font-family: 'Henny Penny', cursive;
  font-family: 'Gorditas', cursive;
  font-size: 60px;
  line-height: 70%;
  color: black !important;
  padding-right: 60px;
  padding-left: 20px;
  font-weight: bolder;
}

div.navbar-brand:hover {
  background: -webkit-linear-gradient(to right, #fff, #b3d9ff, #222);
  background: linear-gradient(to right, #fff, #b3d9ff, #222);
}

.navbar {
  border-bottom: none;
}

.wrapper, .navbar {
  max-width: 960px;
  margin: 0 auto;
}

.tab-pane {
  padding-right: 10px;
  padding-left: 10px;
}

.product-pane {
  background-color: #fff;
  padding-top: 20px;
  padding-right: 20px;
  padding-left: 20px;
}

.add-cart {
  padding: 10px;
}

.col-sm-6 {
  min-height: 400px;
}

.product-img {
  height: 400px;
  width: 100%;
  object-fit: cover;
  border-radius: 5px;
}

.error, .field_with_errors:nth-of-type(2n+1) {
  display: inline-block;
}

.error {
  margin-left: 10px;
}

.field_with_errors:nth-of-type(2n+1) {
  float: left;
}

.sidebar {
  padding-right: 5px;
  padding-left: 5px;
}

.dropdown {
  text-align: center;
}

.panel-title {
  font-size: 14px;
}

.sidebar hr {
  margin: 1px;
}

.photo-gallery {
  display: inline-block;
  width: 80%;
}

@media(max-width:992px){
  .photo-gallery {
    width: 100%;
  }
}

@media(max-width:768px){
  .photo-gallery {
    padding-left: 10%;
    max-width: 90%;
  }
}

div.col-sm-4 img {
  height: 225px;
  width: 100%;
  object-fit: cover;
  border-top-left-radius: 5px;
  border-top-right-radius: 5px;
  opacity: 1;
   transition: opacity .25s ease-in-out;
   -moz-transition: opacity .25s ease-in-out;
   -webkit-transition: opacity .25s ease-in-out;
}

div.col-sm-4 img:hover {
  opacity: 0.7;
}

.col-sm-4 {
  padding-right: 5px;
  padding-left: 5px;
  padding-bottom: 5px;
}

.caption {
  border: 2px solid #f5f5f5;
  padding: 10px;
  border-bottom-left-radius: 5px;
  border-bottom-right-radius: 5px;
}

.cart td:first-of-type {
  width: 30%;
}

.navbar-toggle {
  border: none;
}

